Fixed spacing on mobile view

--- a/resources/assets/sass/partak/_header.scss
+++ b/resources/assets/sass/partak/_header.scss
@@ -31,7 +31,6 @@
   .top-wrapper {
     display: flex;
     width: 100%;
-    margin-bottom: 1rem;
 
     .logo {
       display: block;
@@ -57,6 +56,7 @@
   .navbar-nav {
     flex-direction: column;
     padding-right: 1rem;
+    margin-top: 1rem;
 
     .spacer {
       margin: 1rem 0;
